<resources>
    <string name="app_name">INDOMPTER</string>
    <string name="recent_news">Da Nang International Fireworks Festival 2017</string>
    <string name="in_news">Da Nang International Fireworks Festival 2017Update: Dec 08, 2016 (TITC) - Da Nang International Fireworks Festival 2017 (DIFF 2017) with the theme “Shining Marble Mountains” will take place for two months, from 29 April to 24 June 2017 with the aim to Da Nang become a unique cultural festival tourism space. </string>
    <string name="publish_date">2017-04-30 12:13:14</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="simpan">Simpan</string>

    <string name="exit_msg">Yakin keluar aplikasi?</string>
    <string name="internet">No internet connection, Please make sure your device is connected to the internet</string>
    <string name="remove_fav">Hapus favorit</string>
    <string name="add_to_fav">Ditambahkan favorit</string>
    <string name="address">Address</string>
    <string name="change_address">Change Address</string>
    <string name="lorem_ipsum">Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak.</string>
    <string name="list_product">List Product</string>
    <string name="subtotal">Subtotal</string>
    <string name="voucher_discount">Voucher Discount</string>
    <string name="discount">Discount</string>
    <string name="total_payment">Total Payment</string>
    <string name="method_payment">Method Payment</string>
    <string name="cod">COD</string>
    <string name="make_order">Make Order</string>
    <string name="search">Search</string>

    <!--camera-->
    <string name="uploadImages">Set your image</string>
    <string name="msg_loading">Loading...</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

</resources>
